@@ -1,30 +1,26 @@
 package cn.dextea.product.service.impl;
 
 import cn.dextea.common.web.response.ApiResponse;
-import cn.dextea.product.cache.CacheNames;
 import cn.dextea.product.converter.CustomizationConverter;
-import cn.dextea.product.dto.request.CustomizationOptionListWithStoreIdRequest;
-import cn.dextea.product.dto.request.UpdateStoreCustomizationOptionSaleRequest;
-import cn.dextea.product.dto.response.CustomizationOptionWithStoreStatusResponse;
-import cn.dextea.product.entity.CustomizationItemEntity;
+import cn.dextea.product.dto.request.ItemOptionsListInStore;
+import cn.dextea.product.dto.request.UpdateOptionStoreStatusRequest;
+import cn.dextea.product.dto.response.OptionDetailResponse;
 import cn.dextea.product.entity.CustomizationOptionEntity;
 import cn.dextea.product.entity.StoreCustomizationOptionStatusEntity;
 import cn.dextea.product.enums.CustomizationErrorCode;
-import cn.dextea.product.enums.CustomizationStatus;
-import cn.dextea.product.enums.StoreCustomizationSaleStatus;
+import cn.dextea.product.enums.StoreCustomizationStatus;
 import cn.dextea.product.mapper.CustomizationItemMapper;
 import cn.dextea.product.mapper.CustomizationOptionMapper;
-import cn.dextea.product.mapper.StoreCustomizationOptionRelMapper;
+import cn.dextea.product.mapper.StoreCustomizationOptionStatusMapper;
 import cn.dextea.product.service.CustomizationOptionBizService;
-import cn.dextea.product.service.ProductCacheEvictionService;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import lombok.RequiredArgsConstructor;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -33,51 +29,41 @@ public class CustomizationOptionBizServiceImpl implements CustomizationOptionBiz
 
     private final CustomizationItemMapper itemMapper;
     private final CustomizationOptionMapper optionMapper;
-    private final StoreCustomizationOptionRelMapper storeOptionRelMapper;
+    private final StoreCustomizationOptionStatusMapper storeOptionStatusMapper;
     private final CustomizationConverter customizationConverter;
-    private final ProductCacheEvictionService cacheEvictionService;
 
     @Override
-    @Cacheable(
-            cacheNames = CacheNames.CUSTOMIZATION_OPTIONS_BIZ,
-            key = "'item:' + #itemId + ':store:' + #request.storeId",
-            unless = "#result.code != 0"
-    )
-    public ApiResponse<List<CustomizationOptionWithStoreStatusResponse>> listOptions(Long itemId,
-            CustomizationOptionListWithStoreIdRequest request) {
-        CustomizationItemEntity item = itemMapper.selectOne(new LambdaQueryWrapper<CustomizationItemEntity>()
-                .eq(CustomizationItemEntity::getId, itemId)
-                .eq(CustomizationItemEntity::getStatus, CustomizationStatus.ACTIVE.getValue()));
-        if (item == null) {
+    public ApiResponse<List<OptionDetailResponse>> getItemOptionsList(Long itemId,
+                                                                      ItemOptionsListInStore request) {
+        if (itemMapper.selectById(itemId) == null) {
             return fail(CustomizationErrorCode.ITEM_NOT_FOUND);
         }
+
+        Long storeId = request.getStoreId();
 
         List<CustomizationOptionEntity> options = optionMapper.selectList(
                 new LambdaQueryWrapper<CustomizationOptionEntity>()
                         .eq(CustomizationOptionEntity::getItemId, itemId)
-                        .eq(CustomizationOptionEntity::getStatus, CustomizationStatus.ACTIVE.getValue())
                         .orderByAsc(CustomizationOptionEntity::getId));
 
         if (options.isEmpty()) {
             return ApiResponse.success(List.of());
         }
 
-        Long storeId = request.getStoreId();
-        List<Long> optionIds = options.stream().map(CustomizationOptionEntity::getId).collect(Collectors.toList());
-        Set<Long> onSaleOptionIds = storeOptionRelMapper.selectList(
+        List<Long> optionIds = options.stream().map(CustomizationOptionEntity::getId).toList();
+        Map<Long, Integer> optionStatusMap = storeOptionStatusMapper.selectList(
                 new LambdaQueryWrapper<StoreCustomizationOptionStatusEntity>()
                         .eq(StoreCustomizationOptionStatusEntity::getStoreId, storeId)
                         .in(StoreCustomizationOptionStatusEntity::getOptionId, optionIds))
                 .stream()
-                .map(StoreCustomizationOptionStatusEntity::getOptionId)
-                .collect(Collectors.toSet());
-
-        List<CustomizationOptionWithStoreStatusResponse> result = options.stream()
+                .collect(Collectors.toMap(
+                        StoreCustomizationOptionStatusEntity::getOptionId,
+                        StoreCustomizationOptionStatusEntity::getStatus,
+                        (left, right) -> right));
+        List<OptionDetailResponse> result = options.stream()
                 .map(entity -> {
-                    int storeStatus = onSaleOptionIds.contains(entity.getId())
-                            ? StoreCustomizationSaleStatus.ENABLED.getValue()
-                            : StoreCustomizationSaleStatus.DISABLED.getValue();
-                    return customizationConverter.toOptionWithStoreStatusResponse(entity, storeStatus);
+                    int storeStatus = optionStatusMap.getOrDefault(entity.getId(), StoreCustomizationStatus.DISABLED.getValue());
+                    return customizationConverter.toOptionDetailResponse(entity, storeStatus);
                 })
                 .collect(Collectors.toList());
 
@@ -86,35 +72,35 @@ public class CustomizationOptionBizServiceImpl implements CustomizationOptionBiz
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public ApiResponse<Void> updateSaleStatus(Long optionId, UpdateStoreCustomizationOptionSaleRequest request) {
-        CustomizationOptionEntity option = optionMapper.selectOne(new LambdaQueryWrapper<CustomizationOptionEntity>()
-                .eq(CustomizationOptionEntity::getId, optionId)
-                .eq(CustomizationOptionEntity::getStatus, CustomizationStatus.ACTIVE.getValue()));
-        if (option == null) {
+    public ApiResponse<Void> updateOptionStoreStatus(Long optionId, UpdateOptionStoreStatusRequest request) {
+        if (optionMapper.selectById(optionId) == null) {
             return fail(CustomizationErrorCode.OPTION_NOT_FOUND);
         }
 
         Long storeId = request.getStoreId();
-        LambdaQueryWrapper<StoreCustomizationOptionStatusEntity> relQuery =
+        StoreCustomizationOptionStatusEntity existing = storeOptionStatusMapper.selectOne(
                 new LambdaQueryWrapper<StoreCustomizationOptionStatusEntity>()
                         .eq(StoreCustomizationOptionStatusEntity::getStoreId, storeId)
-                        .eq(StoreCustomizationOptionStatusEntity::getOptionId, optionId);
-
-        if (Boolean.TRUE.equals(request.getOnSale())) {
-            if (!storeOptionRelMapper.exists(relQuery)) {
-                StoreCustomizationOptionStatusEntity rel = StoreCustomizationOptionStatusEntity.builder()
-                        .storeId(storeId)
-                        .optionId(optionId)
-                        .build();
-                if (storeOptionRelMapper.insert(rel) != 1) {
-                    return fail(CustomizationErrorCode.STORE_OPTION_SALE_STATUS_UPDATE_FAILED);
-                }
+                        .eq(StoreCustomizationOptionStatusEntity::getOptionId, optionId));
+        if (existing == null) {
+            StoreCustomizationOptionStatusEntity statusEntity = StoreCustomizationOptionStatusEntity.builder()
+                    .storeId(storeId)
+                    .optionId(optionId)
+                    .status(request.getStatus())
+                    .build();
+            if (storeOptionStatusMapper.insert(statusEntity) != 1) {
+                return fail(CustomizationErrorCode.STORE_OPTION_SALE_STATUS_UPDATE_FAILED);
             }
         } else {
-            storeOptionRelMapper.delete(relQuery);
+            int rows = storeOptionStatusMapper.update(null,
+                    new LambdaUpdateWrapper<StoreCustomizationOptionStatusEntity>()
+                            .eq(StoreCustomizationOptionStatusEntity::getStoreId, storeId)
+                            .eq(StoreCustomizationOptionStatusEntity::getOptionId, optionId)
+                            .set(StoreCustomizationOptionStatusEntity::getStatus, request.getStatus()));
+            if (rows != 1) {
+                return fail(CustomizationErrorCode.STORE_OPTION_SALE_STATUS_UPDATE_FAILED);
+            }
         }
-
-        cacheEvictionService.evictCustomizationOptionsBizByItem(option.getItemId());
 
         return ApiResponse.success();
     }
